# mergeeda_v2

./: .dockerignore  .gitignore  README.md  pyproject.toml
configs/augmentation/: amba_eval_qa.yaml
configs/evaluation/: eval_base_model.yaml
configs/evaluation/model/: qwen_vl_finetuned_model.yaml  qwen_vl_model.yaml
configs/model/: qwen_vl_finetuned_model.yaml  qwen_vl_model.yaml
configs/preprocess/: amba_document.yaml  generate_train_data.yaml  merge_train_data.yaml
data/evaluation/base_model_prev/: axi.json
data/evaluation/base_model_prev/IHI0022L_amba_axi_protocol_spec/: preds.json
data/evaluation/base_model_prev/IHI0024E_amba_apb_architecture_spec/: preds.json  scores.json
docker/: Dockerfile.cpu  Dockerfile.gpu
preprocess_data/: generate_train_data.py  merge_train_data.py  split_train_test.py
qwen-vl-finetune/qwenvl/data/: __init__.py  data_processor.py  hf_loader.py
qwen-vl-finetune/qwenvl/train/: argument.py  train_qwen.py  trainer.py
scripts/: inference.sh  train_data.sh
scripts/augmentation/: amba_eval_qa.py
scripts/evaluation/: eval_base_model.py
scripts/preprocess/: amba_document.py  generate_train_data.py  merge_train_data.py
scripts/train/: train.sh
src/mergeeda/augmentation/: EvalQSetGenerator.py  QGenerator.py  __init__.py
src/mergeeda/evaluation/: AnswerGenerator.py  LLMJudgeEvaluator.py  __init__.py
src/mergeeda/models/: __init__.py  builder.py  qwen_vl_finetuned_model.py  qwen_vl_model.py
src/mergeeda/preprocess/: OCRParser.py  TrainDataGenerator.py  TrainDataMerger.py  __init__.py
(+8 files in other folders)
